$Id$
===============================================================

5	Luke Howard <lukeh@padl.com>

	* fix an uninitialized variable
	* fix dbopen() usage for Berkeley DB 3
	* add usage option to cc_dump

4	Luke Howard <lukeh@padl.com>

	* build fix (include syslog.h)

2	Luke Howard <lukeh@padl.com>

	* patch from Nicolas Boullis <nicolas.boullis@ecp.fr>:
	  print last byte of hash
	* patch from Nicolas Boullis <nicolas.boullis@ecp.fr>:
	  handle the case where neither use_first_pass nor try_first_pass
	  are given
	* patch from Guido Guenther <agx@sigxcpu.org>:
	  fix "cc_test any user -" (currently nothing gets deleted from
	  the cache)

1	Luke Howard <lukeh@padl.com>

	* initial revision
